# crispasr_ros

./: .gitignore  .gitmodules  pixi.toml
crispasr_msgs/: CMakeLists.txt  package.xml
crispasr_msgs/msg/: ConfirmationResult.msg  SpeechResult.msg
crispasr_ros/: CMakeLists.txt  package.xml  setup.py
crispasr_ros/config/: params_ros1.yaml  params_ros2.yaml
crispasr_ros/launch/: audio_source.launch  audio_source.launch.py  crispasr.launch  crispasr.launch.py  hsr_ssh_asr.launch
crispasr_ros/scripts/: audio_publisher_node  confirmation_ros_demo  crispasr_node  hsr_ssh_asr_demo  microphone_node
crispasr_ros/src/crispasr_ros/: asr_engine.py  audio_resample.py  compat.py  confirmation.py  runtime_paths.py
crispasr_ros/test/: test_audio_resample.py  test_confirmation.py  test_confirmation_ros_demo.py  test_crispasr_node_consumers.py  test_hsr_ssh_asr_demo.py  test_microphone_arecord_backend.py  test_pixi_tasks.py  test_runtime_paths.py
